cli option for reporting rejected tx endpoint